Update FFI specific code against JEP442 in JDK21
Note:
The modifications are based on the latest APIs in JDK21
to support JEP442 as mentioned at eclipse-openj9#16951.

Signed-off-by: ChengJin01 <jincheng@ca.ibm.com>